<resources>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="app_name">BloQuery</string>
    <string name="parse_app_id">Q72zpvyE5xj4tOu90i4tKGlqnIkBjKFClTNdJ3M8</string>
    <string name="parse_client_key">ge8byOE5jLvHaVkjfE99tQQsdtmsTwv09BLCGGa7</string>
    <string name="question_rating">Question Rating</string>
    <string name="question_user">User who wrote the question</string>
    <string name="user_icon">User Icon</string>
    <string name="more_options_menu">More Options Menu</string>
    <string name="upvote">Upvote</string>
    <string name="add_answer">Add an answer</string>
    <string name="add_question">Add a question</string>
    <string name="answer_dialog_title">Your answer</string>
    <string name="questions_dialog_title">Query the community</string>
    <string name="refresh">Refresh</string>
    <string name="save_description">Save Description</string>
    <string name="edit_description">Edit Description</string>
</resources>
