<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        style="@style/Title"
        android:id="@+id/main_title"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/main_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/main_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/main_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/log_in"/>

    <Button
        android:id="@+id/main_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"/>

</RelativeLayout>